--- a/hotelservice/src/main/resources/application.yml
+++ b/hotelservice/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8082
 spring:
+  application:
+    name: HOTEL_SERVICE
   datasource:
     url: jdbc:mysql://localhost:3306/micro_user_service
     username: root
@@ -13,3 +15,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
