--- a/ratingservice/src/main/resources/application.yml
+++ b/ratingservice/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
   port: 8083
 spring:
+  application:
+    name: RATING_SERVICE
   data:
     mongodb:
       url: mongodb://localhost:27017
       database: microservices
-#    url: jdbc:mysql://localhost:3306/micro_user_service
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
