--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8081
 spring:
+  application:
+    name: USER_SERVICE
   datasource:
     url: jdbc:mysql://localhost:3306/micro_user_service
     username: root
@@ -13,3 +15,16 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+ratingservice:
+  url: http://localhost:8083/api/v1/ratingService/
+hotelservice:
+  url: http://localhost:8082/api/v1/hotelServices/
