--- a/ratingservice/src/main/resources/application.yml
+++ b/ratingservice/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8083
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   application:
-    name: RATING_SERVICE
+    name: RATING-SERVICE
   data:
     mongodb:
       url: mongodb://localhost:27017
