--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 server:
   port: 8081
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
   application:
-    name: USER_SERVICE
+    name: USER-SERVICE
   datasource:
     url: jdbc:mysql://localhost:3306/micro_user_service
     username: root
