swagger implemented in api-gateway and integration with config server started

--- a/ratingservice/src/main/resources/application.yml
+++ b/ratingservice/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8083
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api/v1/ratingService/v2/api-docs
 spring:
   mvc:
     pathmatch:
