--- a/gatewayservice/src/main/resources/application.yml
+++ b/gatewayservice/src/main/resources/application.yml
@@ -5,34 +5,51 @@ spring:
     name: GATEWAY-SERVICE
   cloud:
     gateway:
-      # User service route
-      routes[0].id: USER-SERVICE
-      routes[0].uri: http://localhost:8081
-      routes[0].predicates[0]: Path=/api/v1/userServices/**
-
-      # Hotel service route
-      routes[1].id: HOTEL-SERVICE
-      routes[1].uri: http://localhost:8082
-      routes[1].predicates[0]: Path=/api/v1/hotelServices/**
-
-      # RATING _SERVICE service static resources route
-      routes[2].id: RATING-SERVICE
-      routes[2].uri: http://localhost:8083
-      routes[2].predicates[0]: Path=/api/v1/ratingService/**
-
-
-#      routes:
-#        - id: USER_SERVICE
-#          uri: http://localhost:8081
-#          predicates:
-#            - Path=/api/v1/userServices/**
+#      discovery:
+#        locator:
+#          enabled: true
+#      globalcors:
+#        corsConfigurations:
+#          '[/**]':
+#            allowedOrigins: "*"
+#            allowedMethods: "*"
+#            allowedHeaders: "*"
+#      # User service route
+#      routes[0].id: USER-SERVICE
+#      routes[0].uri: http://localhost:8081
+#      routes[0].predicates[0]: Path=/api/v1/userServices/**
 #
-#        - id: RATING_SERVICE
-#          uri: http://localhost:8083
-#          predicates:
-#            - Path=/api/v1/ratingService/**
+#      # Hotel service route
+#      routes[1].id: HOTEL-SERVICE
+#      routes[1].uri: http://localhost:8082
+#      routes[1].predicates[0]: Path=/api/v1/hotelServices/**
 #
-#        - id: HOTEL_SERVICE
-#          uri: http://localhost:8082
-#          predicates:
-#            - Path=/api/v1/hotelServices/**
+#      # RATING _SERVICE service static resources route
+#      routes[2].id: RATING-SERVICE
+#      routes[2].uri: http://localhost:8083
+#      routes[2].predicates[0]: Path=/api/v1/ratingService/**
+
+
+      routes:
+        - id: USER-SERVICE
+          uri: http://localhost:8081
+          predicates:
+            - Path=/api/v1/userServices/**
+
+        - id: RATING-SERVICE
+          uri: http://localhost:8083
+          predicates:
+            - Path=/api/v1/ratingService/**
+
+        - id: HOTEL-SERVICE
+          uri: http://localhost:8082
+          predicates:
+            - Path=/api/v1/hotelServices/**
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
