--- a/hotelservice/src/main/resources/application.yml
+++ b/hotelservice/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 8082
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /api/v1/hotelServices/v2/api-docs
+    swagger-ui:
+      base-url: /api/v1/hotelServices/swagger-ui
 spring:
   application:
     name: HOTEL-SERVICE
@@ -20,8 +27,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-
 eureka:
   instance:
     prefer-ip-address: true
@@ -30,3 +35,5 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
