--- a/userservice/pom.xml
+++ b/userservice/pom.xml
@@ -35,6 +35,10 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 <!--		<dependency>-->
 <!--			<groupId>io.springfox</groupId>-->
