--- a/configservice/src/main/resources/application.yml
+++ b/configservice/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
         git:
           uri: https://github.com/ayushjajodia121/microserviceHotelRatingConfiguration
           username: ayushjajodia121
-          password: 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
+          password: ''
           clone-on-start: true
