circuit breaker implementation

--- a/ratingservice/src/main/resources/application.yml
+++ b/ratingservice/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       database: microservices
 eureka:
   instance:
+    statusPageUrlPath: api/v1/ratingService/actuator
     prefer-ip-address: true
   client:
     fetch-registry: true
