--- a/hotelservice/build.gradle
+++ b/hotelservice/build.gradle
@@ -25,14 +25,28 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.7.5'
+
+
+	//dependency for registering microservice as a client on discovery service
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	//dependency for interMicroservice communication
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	// dependency for config service implementation
+//	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
+//  dependency for swagger-2
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
+	//dependency for resilience4j
+	// https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-spring-boot2
+	implementation group: 'io.github.resilience4j', name: 'resilience4j-spring-boot2'
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
