--- a/hotelservice/src/main/resources/application.yml
+++ b/hotelservice/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  config:
-    import: configserver:http://localhost:8888
+#  config:
+#    import: configserver:http://localhost:8888
   datasource:
     url: jdbc:mysql://localhost:3306/micro_user_service
     username: root
